--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@types/react": "18.0.0",
-    "@types/react-dom": "18.0.0",
-    "@vitejs/plugin-react": "1.3.0",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "10.4.7",
-    "postcss": "8.4.13",
+    "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
     "tailwindcss": "3.0.24",
-    "vite": "2.9.7"
+    "vite": "^2.9.9"
   }
 }
